--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
   "dependencies": {
     "axios": "^0.16.2",
     "bignumber": "^1.1.0",
+    "bignumber.js": "^7.2.1",
+    "bip39": "^2.5.0",
     "bluebird": "^3.5.0",
     "body-parser": "~1.17.1",
     "coinpayments": "^1.1.2",
     "cookie-parser": "~1.4.3",
+    "cryptr": "^3.0.0",
     "debug": "~2.6.3",
     "dotenv": "^5.0.1",
     "ejs": "~2.5.6",
+    "ethereumjs-tx": "^1.3.4",
+    "ethereumjs-wallet": "^0.6.0",
     "express": "~4.15.2",
     "express-session": "^1.15.5",
     "express-validator": "^3.2.1",
@@ -24,11 +29,12 @@
     "mongoose": "^4.11.5",
     "morgan": "~1.8.1",
     "nodemailer": "^4.0.1",
+    "nodemailer-sparkpost-transport": "^2.0.0",
     "qrcode": "^0.9.0",
     "randomstring": "^1.1.5",
     "serve-favicon": "~2.4.2",
     "socket.io": "^2.0.3",
-    "web3": "^0.19.1"
+    "web3": "^1.0.0-beta.34"
   },
   "description": "Wallet For Solomonex Coin",
   "main": "app.js",
