configured for mainnet

--- a/.env
+++ b/.env
@@ -16,5 +16,5 @@ ETHERAPIKEY =	2HXSTTK8IYR22W6IDYHSE8KQ48FQ23Z3RT
 SESSIONSECRET	=	secretspgforforever@!123@#$
 ALGORITHM	=	aes-256-ctr
 SPARKPOST_API_KEY='c15f1c58e6997ff703ca6a3dfa0725c481e385db'
-RPCPROVIDER = 'https://rinkeby.infura.io/8m9GjFe5QIkDl78RDNdS'
+RPCPROVIDER = 'https://mainnet.infura.io/8m9GjFe5QIkDl78RDNdS'
 MP = 'ardnahcrawhsi@786'
