--- a/.env
+++ b/.env
@@ -18,3 +18,4 @@ ALGORITHM	=	aes-256-ctr
 SPARKPOST_API_KEY='c15f1c58e6997ff703ca6a3dfa0725c481e385db'
 RPCPROVIDER = 'https://mainnet.infura.io/8m9GjFe5QIkDl78RDNdS'
 MP = 'ardnahcrawhsi@786'
+RATE = 0.325
